fix broken ui

--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -8,12 +8,12 @@ ul#services {
       line-height: 25px;
     }
 
-    h1, .events {
+    h1, .controls {
       line-height: 75px;
     }
 
-    .events {
-      padding-top: 10px;
+    .controls {
+      padding-top: 13px;
     }
   }
 }
